<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_string_cancel">Cancel</string>
    <string name="menu_next">Next</string>
    <string name="send_as_email">Send as email</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough!</string>
    <string name="nav_send_message">Send...</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>

    <string name="pref_title_add_friends_to_message">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When Possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_email_address">Email address</string>
    <string name="pref_default_email_address">yourname@yourhost.com</string>
    <string name="pref_title_favorite_Social">Favorite social network</string>

    <string-array name="pref_entries_favorite_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
        <item>ConsultEngineer</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
        <item>http://consultengineer.blogspot.com.ng</item>
    </string-array>

    <string name="pref_default_favorite_social">http://plus.google.com</string>
    <string name="title_activity_settings">Settings.</string>

    <string name="note_reminder_notification_title_template">Note reminder: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="note_reminder_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

</resources>
