<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="user_display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_display_name"/>

     <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:key="user_email_address"
        android:singleLine="true"
        android:title="@string/pref_title_email_address"/>

    <ListPreference
        android:defaultValue="@string/pref_default_favorite_social"
        android:entries="@array/pref_entries_favorite_social"
        android:entryValues="@array/pref_values_favorite_social"
        android:key="user_favorite_social"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_favorite_Social"/>

</PreferenceScreen>